# bwavfile

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: coverage.yml  rust.yml
examples/: blits.rs  bwavefile-probe.rs  wave-deinter.rs  wave-inter.rs
src/: audio_frame_reader.rs  audio_frame_writer.rs  bext.rs  chunks.rs  common_format.rs  cue.rs  errors.rs  fmt.rs  fourcc.rs  levl.rs  lib.rs  list_form.rs  parser.rs  raw_chunk_reader.rs  sample.rs  sampler.rs  validation.rs  wavebuffer.rs  wavereader.rs  wavewriter.rs
tests/: Untitled.txt  create_test_media.sh  ffprobe_media_results.json  ffprobe_media_tests.json  ffprobe_media_tests.rs  integration_test.rs  media_ffprobe_result.json  test_wave_properties.toml
