[package]
name = "bwavfile"
version = "0.9.2"
authors = ["Jamie Hardt <jamiehardt@me.com>"]
edition = "2018"
license = "MIT"
description = "Rust Wave File Reader/Writer with Broadcast-WAV, MBWF and RF64 Support"
homepage = "https://github.com/iluvcapra/bwavfile"
readme = "README.md"
categories = ["multimedia::audio", "parsing"]
keywords = ["audio", "broadcast", "multimedia","smpte"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
encoding = "0.2.33"
serde_json = "1.0.61"
uuid = "0.8.1"
docopt = "1.1.0"

[profile.release]
debug = true

