[package]
name = "bwavfile"
version = "2.0.1"
authors = ["Jamie Hardt <jamiehardt@me.com>", "Ian Hobson <ian.r.hobson@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Rust Wave File Reader/Writer with Broadcast-WAV, MBWF and RF64 Support"
homepage = "https://github.com/iluvcapra/bwavfile"
readme = "README.md"
categories = ["multimedia::audio", "parsing"]
keywords = ["audio", "broadcast", "multimedia","smpte"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
dasp_sample = "0.11.0"
encoding = "0.2.33"
uuid = "0.8.1"
clap = "2.33.3"

[dev-dependencies]
serde_json = "1.0.61"

[profile.release]
debug = true

[build]
profiler = true
